--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,10 @@
   <name>akka-persistence-projections-example</name>
   <description>Akka persistence projections example</description>
   <properties>
-    <akka.version>2.6.15</akka.version>
+    <akka.version>2.7.0</akka.version>
     <scala.binary.version>2.13</scala.binary.version>
     <java.version>11</java.version>
-
     <scala.binary.version>2.13</scala.binary.version>
-
   </properties>
   <dependencies>
     <dependency>
@@ -101,10 +99,18 @@
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-serialization-jackson_${scala.binary.version}</artifactId>
     </dependency>
+    <!--   <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+         <version>2.12.4</version>
+       </dependency>-->
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.12.4</version>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-persistence_${scala.binary.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-persistence-query_${scala.binary.version}</artifactId>
     </dependency>
     <dependency>
       <groupId>com.typesafe.akka</groupId>
@@ -153,6 +159,41 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>com.lightbend.akka</groupId>
+      <artifactId>akka-projection-eventsourced_${scala.binary.version}</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+      <version>2.1.8.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jdbi</groupId>
+      <artifactId>jdbi3-spring4</artifactId>
+      <version>3.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jdbi</groupId>
+      <artifactId>jdbi3-sqlobject</artifactId>
+      <version>3.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.199</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.lightbend.akka</groupId>
+      <artifactId>akka-projection-jdbc_2.13</artifactId>
+      <version>1.3.1</version>
+    </dependency>
     <!--  <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
@@ -164,7 +205,7 @@
       <dependency>
         <groupId>com.typesafe.akka</groupId>
         <artifactId>akka-bom_${scala.binary.version}</artifactId>
-        <version>2.6.15</version>
+        <version>${akka.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -181,8 +222,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
       <plugin>
