--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,7 @@ akka.persistence.journal.auto-start-journals[0]=[jdbc-journal]
 akka.persistence.snapshot-store.plugin=jdbc-snapshot-store
 akka.persistence.snapshot-store.auto-start-snapshot-stores[0]=[jdbc-snapshot-store]
 
-jdbc-journal.use-shared-db=slick
-jdbc-snapshot-store.use-shared-db=slick
-jdbc-read-journal.use-shared-db=slick
+
 
 akka-persistence-jdbc.shared-databases.slick.profile=slick.jdbc.MySQLProfile$
 akka-persistence-jdbc.shared-databases.slick.db.driver=com.mysql.cj.jdbc.Driver
@@ -25,12 +23,42 @@ akka-persistence-jdbc.shared-databases.slick.db.password=
 akka-persistence-jdbc.shared-databases.slick.db.numThreads=5
 akka-persistence-jdbc.shared-databases.slick.db.maxConnections=5
 akka-persistence-jdbc.shared-databases.slick.db.minConnections=1
-
+jdbc-journal.use-shared-db=slick
+jdbc-snapshot-store.use-shared-db=slick
+jdbc-read-journal.use-shared-db=slick
+jdbc-durable-state-store.use-shared-db=slick
 jdbc-journal.class=akka.persistence.jdbc.journal.JdbcAsyncWriteJournal
 
 akka.actor.serializers.jackson-json=akka.serialization.jackson.JacksonJsonSerializer
-akka.actor.serializers.jackson-cbor=akka.serialization.jackson.JacksonCborSerializer
+#akka.actor.serializers.jackson-cbor=akka.serialization.jackson.JacksonCborSerializer
 
-#akka.actor.serialization-bindings.=com.news.actors.NewsArticleEntity$Added=jackson-cbor
+akka.actor.serialization-bindings[0]=com.lightbend.lagom.serialization.Jsonable=jackson-json
+akka.actor.serialization-bindings[1]=com.newsarticles.projection.Jsonable=jackson-json
+akka.actor.serialization-bindings[2]=news.newsarticles.actors.NewsArticleEntity.Added=jackson-json
+akka.actor.serialization-bindings[3]=news.newsarticles.projection.NewsArticleEvents.NewsArticleAddedEvent=jackson-json
 
-akka.actor.akka.actor.allow-java-serialization=off
+akka.actor.allow-java-serialization=false
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://local.yieldstreet.net:3306/news_articles
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.flyway.baseline-on-migrate = true
+spring.flyway.enabled=true
+
+spring.flyway.user=root
+spring.flyway.password=
+spring.flyway.schemas=news_articles
+spring.flyway.url=jdbc:mysql://local.yieldstreet.net:3306/news_articles
+spring.flyway.locations=classpath:db/migration
+
+akka.projection.jdbc.blocking-jdbc-dispatcher.thread-pool-executor.fixed-pool-size=16
+akka.projection.jdbc.dialect=mysql-dialect
+akka.projection.jdbc.offset-store.table=akka_projection_offset_store
+
+jdbc-defaults.slick.profile=slick.jdbc.MySQLProfile$
+
+logging.level.root=INFO
+
+akka.projection.jdbc.debug.verbose-offset-store-logging=true
